--- a/frontend/connectoon/src/Containers/Board/Board.css
+++ b/frontend/connectoon/src/Containers/Board/Board.css
@@ -1,26 +1,27 @@
-
-.board-table{
-    width: 80vw;
-    margin: 0 auto;
-    border-spacing: 0 10px;
+.board {
+	width: 1000px;
+	margin: 0px max(calc(50% - 500px), 0px) 40px max(calc(50% - 500px), 0px);
 }
 
-.board-header-row{
-
-    justify-content: center;
+.board-page-title {
+	text-align: left;
+	text-indent: 50px;
 }
 
-.board-header.work{
-    flex:1;
+.board-table {
+	width: 1000px;
+	margin: 0;
+	border-spacing: 0 10px;
 }
 
-.board-header.review{
-
-    flex:5;
+.board-header-row {
+	justify-content: center;
 }
 
-.board-review {
-    background-color: rgb(248, 248, 248);
-    margin-bottom: 8px;
+.board-header.work {
+	flex:1;
 }
 
+.board-header.review {
+	flex:5;
+}
